<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.0</version>
        <relativePath/>
    </parent>

    <groupId>io.leavesfly</groupId>
    <artifactId>jharness2</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>JHarness2</name>
    <description>Multi-user AI Agent Web Service based on JHarness kernel</description>

    <modules>
        <module>jharness2-engine</module>
        <module>jharness2-core</module>
        <module>jharness2-storage</module>
        <module>jharness2-web</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <caffeine.version>3.1.8</caffeine.version>
        <okhttp.version>4.12.0</okhttp.version>
        <jjwt.version>0.12.5</jjwt.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 子模块 -->
            <dependency>
                <groupId>io.leavesfly</groupId>
                <artifactId>jharness2-engine</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.leavesfly</groupId>
                <artifactId>jharness2-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.leavesfly</groupId>
                <artifactId>jharness2-storage</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.leavesfly</groupId>
                <artifactId>jharness2-web</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Caffeine 缓存 -->
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>

            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
